GNOME Bugzilla – Bug 751441
Warnings of unused variables
Last modified: 2015-06-24 15:26:33 UTC
There are a couple of unused variable warnings with CFLAGS="-Wall -g -02"
Created attachment 306008 [details] [review] Fix jaw_object_get_parent warning Committed to wip, but I'll wait until I have dealt with the other two before pushing to master because I might have to create some "helper" methods.
Created attachment 306010 [details] [review] Fix jaw_object_set_parent warning
Created attachment 306012 [details] [review] Fix jaw_object_set_role warning
Created attachment 306017 [details] [review] Create jaw_impl_get_object_table helper function
Review of attachment 306008 [details] [review]: Pushed to master with https://git.gnome.org/browse/java-atk-wrapper/commit/?id=227ec2145f46932021ca58f1b9c2e8c4b4e173ca
Review of attachment 306010 [details] [review]: Pushed to master with https://git.gnome.org/browse/java-atk-wrapper/commit/?id=038384cbb3f40b3aebeb386d5cf5eaaac07cc6b0
Review of attachment 306012 [details] [review]: Pushed to master with https://git.gnome.org/browse/java-atk-wrapper/commit/?id=b6ffbf7179f6ab857138471bbb397de079944e86
Review of attachment 306017 [details] [review]: Pushed to master with https://git.gnome.org/browse/java-atk-wrapper/commit/?id=3c73d3a72376f2c75aa967b2f1e1cd7645b328ee