JNI: Fix unused variable warning in jaw_object_get_parent

Bug: https://bugzilla.gnome.org/show_bug.cgi?id=751441